YUK-16739 - Create/Edit TDC Display (UI)   - fix issue with cross icon and removed jumping when entering search criteria and clearing

--- a/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/icons.css
+++ b/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/icons.css
@@ -1102,7 +1102,7 @@ License: http://creativecommons.org/licenses/by/3.0/
 .icon-layout-go { background-position: -160px -416px; }
 .icon-transmitter { background-position: -176px -416px; }
 .icon-bullet-arrow-right { background-position: -192px -416px; }
-.icon-cross-gray { background-position: -208px -416px; }
+.icon-cross-gray { background-position: -207px -416px; }
 .icon-eye-closed { background-position: -224px -416px; }
 /* 32 pixel icons */
 .icon-32-blank  { background-position: 32px 32px; }
